src/app.css
/* ... */
ul.basic-list {
  @apply mb-7 pl-5;
  list-style-type: square;
  li {
    @apply p-1 text-lg font-light;
    &::marker {
      @apply text-primary;
    }
  }
}

ol.basic-list {
  @apply mb-7 pl-5;
  list-style-type: decimal;
  li {
    @apply p-1 text-lg font-light;
    &::marker {
      @apply text-primary font-semibold;
    }
  }
}

img,
picture {
  @apply block max-w-full;
}

input,
button,
textarea,
select {
  font: inherit;
}

textarea:not([rows]) {
  @apply min-h-40;
}

:target {
  scroll-margin-block: 5ex;
}

/* LAYOUT */
.wrapper {
  .global-loading {
    @apply flex h-dvh w-full items-center justify-center;
    position: fixed;
    top: 0;
    left: 0;
    background: white;
    z-index: 9999;
  }
  main {
    @apply bg-base-50 xl:min-h-[calc(100dvh-738px)];

    .inner-box {
      @apply mx-auto h-full w-full max-w-7xl px-10;
      &.reduced {
        @apply max-w-5xl;
      }
    }
  }
}

/* HELPER */
.very-tiny-spacer {
  @apply m-0 h-1 w-full p-0;
}
.tiny-spacer {
  @apply m-0 h-2 w-full p-0;
}
.medium-spacer {
  @apply m-0 h-4 w-full p-0;
}
.spacer {
  @apply m-0 h-8 w-full p-0;
}
.big-spacer {
  @apply m-0 h-12 w-full p-0;
}
.massive-spacer {
  @apply m-0 h-20 w-full p-0;
}
/* Special Button Style */
.btn-basic {
  @apply from-purple via-pink to-violet flex items-center justify-center rounded-md border-0 bg-linear-to-r bg-size-[200%_auto] px-12 py-5 text-lg leading-none font-bold text-nowrap text-white shadow-md transition-all duration-500;

  &:disabled,
  &[disabled] {
    @apply cursor-not-allowed opacity-40;
    &:hover {
      @apply cursor-not-allowed bg-left;
    }
  }
  svg {
    @apply mx-1;
  }
  &:hover {
    @apply cursor-pointer bg-right shadow-none;
  }
}
.btn-basic-header {
  @apply from-purple via-pink to-violet flex h-11.5 items-center justify-center rounded-md border-0 bg-linear-to-r bg-size-[200%_auto] px-7 text-lg leading-none font-bold text-nowrap text-white shadow-md transition-all duration-500;

  &:disabled,
  &[disabled] {
    @apply cursor-not-allowed opacity-40;
    &:hover {
      @apply cursor-not-allowed bg-left;
    }
  }
  svg {
    @apply mx-1;
  }
  &:hover {
    @apply cursor-pointer bg-right shadow-none;
  }
}
.btn-simple {
  @apply from-pink to-violet border-0 bg-linear-to-r text-nowrap text-white;
  &:hover {
    @apply from-pink/80 to-violet/80 cursor-pointer shadow-none;
  }
}
.btn-inverted-outline {
  @apply rounded-md border border-white bg-transparent px-8 py-5 text-lg leading-none text-nowrap text-white transition-all;
  &:hover {
    @apply cursor-pointer bg-white/20;
  }
}
.btn-outline-basic {
  @apply from-purple to-pink w-fit rounded-lg border-0 bg-linear-to-r;
  .button-inner {
    @apply bg-base-200 text-base-content m-0.5 rounded-lg px-3 py-1 text-nowrap;
  }
  &:hover {
    @apply cursor-pointer;
    .button-inner {
      @apply bg-transparent text-white;
    }
  }
}
.btn-outline-header {
  @apply from-purple to-pink mr-3 h-11.5 w-fit rounded-lg border-0 bg-linear-to-r;
  .button-inner {
    @apply bg-base-200 text-base-content m-0.5 flex h-[calc(100%-4px)] items-center justify-center rounded-md px-4 font-bold text-nowrap;
  }
  &:hover {
    @apply cursor-pointer opacity-60;
  }
}
.badge-primary {
  @apply from-pink to-violet border-0 bg-linear-to-r text-nowrap text-white;
}

/* DaisyUI Component Overwrites */
.badge {
  @apply px-4 min-h-8;
}

/* Custom Styles / Overwrites */
.modal-box {
  &.small-modal {
    @apply max-h-[92vh] max-w-2xl;
  }
  &.large-modal {
    @apply max-h-[96vh] max-w-6xl;
  }
}
div.alert {
  background-image: none !important;
}

/* Key Frame Animations */
@keyframes fadeIn {
  0% {
    opacity: 0.1;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fadeInUp {
  0% {
    opacity: 0;
    transform: translateY(30px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
@keyframes fadeInFromSide {
  0% {
    opacity: 0;
    transform: translateX(30px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

